# chitransit

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  chitransit_control  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: Makefile.am  Makefile.in  chitransit.desktop  chitransit.glade
src/: Makefile.am  Makefile.in  buses.c  buses.h  chitransit.glade  chitransit.py  faq.c  faq.h  helpers.c  helpers.h  main.c  main.c~  main.h  maps.c  maps.h  prefs.c  prefs.h  trains.c  trains.h  trains.pl
