#
# misc. data files
#
# None yet
dist_pkgdata_DATA = chitransit.glade

#
# desktop integration: .desktop file
#
desktopdir = $(datadir)/applications
dist_desktop_DATA = chitransit.desktop

#
# desktop integration: application icon
#
appicondir = $(datadir)/pixmaps
dist_appicon_DATA = chitransit.png
